[2019-04-24 16:26:17.442] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 16:26:17.442] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 16:58:44.460] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 16:58:44.460] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 16:58:44.460] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 16:58:44.460] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:01:15.076] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:01:15.076] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:01:15.076] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:01:15.076] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:09:18.526] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:09:18.526] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:09:18.526] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:09:18.526] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:11:18.117] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:11:18.117] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:11:18.117] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:11:18.117] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:49:44.378] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:49:44.378] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:49:44.378] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:49:44.378] [logger] [info] Material 0 was added to project A Great Movie